...
    static func ellipsisButton(completion: @escaping () -> Void) -> some ToolbarContent {
        ToolbarItem(placement: .topBarTrailing) {
            Menu {
                Button {
                    completion()
                } label: {
                    Text("Удалить")
                }
            } label: {
                Image(systemName: "ellipsis")
                    .fontWeight(.medium)
            }
        }
...
    @ToolbarContentBuilder
    static func backButton(completion: @escaping () -> Void) -> some ToolbarContent {
        ToolbarItem(placement: .topBarLeading) {
            Button {
                completion()
            } label: {
                Image(systemName: "chevron.left")
                    .fontWeight(.medium)
            }
        }
    }
}

...
