...
            }
        }
        .onAppear {
            viewModel.fetchTransactions(card)
            viewModel.observeTransactions(card)
        }
        .navigationTitle("История операций")
        .navigationBarTitleDisplayMode(.inline)
        .toolbar {
            ButtonComponents.ellipsisButton {
                viewModel.showEllipsis.toggle()
            }
        }
...
