...
                                .font(.title2)
                                .fontWeight(.medium)
                        }
                    }
                    
                    VStack(alignment: .leading, spacing: 20) {
                        Text("Детали транзакции")
                            .fontWeight(.medium)
                        
                        VStack(alignment: .leading, spacing: 10) {
                            HStack {
                                Text("Статус")
                                    .foregroundStyle(.gray)
...
